--- a/android/local.properties
+++ b/android/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 19 13:37:00 IST 2023
-sdk.dir=/Volumes/DATA/Android/sdk
+#Sun May 21 16:29:46 AST 2023
+sdk.dir=/Users/fkh9/Library/Android/sdk
