--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/jest": "^28.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
+    "@types/uuid": "^9.0.1",
     "commitlint": "^17.0.2",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
@@ -150,5 +151,10 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "@nearpaydev/nearpay-ts-sdk": "^1.0.3",
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "uuid": "^9.0.0"
   }
 }
